# ra-trabecular

./: README.md
ra-trabecular/: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
ra-trabecular/data/: README.md
ra-trabecular/docs/: irce_definition.md  roadmap.md  theory.md
ra-trabecular/notebooks/: 01_voronoi_basic.ipynb  01_voronoi_basic.md  README.md
ra-trabecular/src/ra_trabecular/: __init__.py  anisotropy.py  connectivity.py  erosion.py  irce.py  mechanics.py  voronoi.py
ra-trabecular/tests/: test_irce.py
